REGRESSION(r244182): [GTK] Web view no longer updated after re-entering AC mode https://bugs.webkit.org/show_bug.cgi?id=198367

Reviewed by Sergio Villar Senin.

This happens because we leave accelerated compositing mode when a rendering update is scheduled in
RenderingUpdateScheduler. The ThreadedDisplayRefreshMonitor is destroyed without completing the
frame, so that the RenderingUpdateScheduler is left scheduled forever, ignoring any new schedule request. We
need to ensure we complete the frame request before destroying the display refresh monitor to leave the
RenderingUpdateScheduler in a consistent state.

* Shared/CoordinatedGraphics/threadedcompositor/ThreadedDisplayRefreshMonitor.cpp:
(WebKit::ThreadedDisplayRefreshMonitor::invalidate):

Canonical link: https://commits.webkit.org/212431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245954 268f45cc-cd09-0410-ab3c-d52691b4dbfc